<package format="2">
  <name>software_training_assignment</name>
  <version>1.2.4</version>
  <description>
  This package finishes the coding challenge for ROS
  </description>
  <maintainer email="ch35li@uwaterloo.ca">Alvin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>
  <depend>actionlib_msgs</depend>
  <exec_depend>message_generation</exec_depend>
</package>
